# drugoe_nazvanie-numerical-methods

./: .gitmodules  README.md
.github/workflows/: build.yml  task7_LogImpl_ci.yaml
chi_square/: additional_readme.md  readme.md
chi_square/logs/2026_03_09_23_03_12/: Logfile.html
chi_square/logs/2026_03_09_23_04_26/: Logfile.html
chi_square/logs/2026_03_09_23_06_53/: Logfile.html
chi_square/logs/2026_03_10_01_08_45/: Logfile.html
chi_square/logs/2026_03_10_01_14_58/: Logfile.html
chi_square/logs/2026_03_10_01_18_44/: Logfile.html
chi_square/source/: main.cpp
chi_square/source/chi_sq_generator/include/chi_sq_generator/: chi_sq_generator.hpp
chi_square/source/rnd_bit_generators/include/rnd_bit_generators/: mrg32k3a.hpp
chi_square/source/rnd_normal_generator/include/rnd_normal_generator/: rnd_normal_generator.hpp
chi_square/tmp/: biv_rho_0.txt  biv_rho_pos.txt
rnd_generators_test/: CMakeLists.txt  readme.md
rnd_generators_test/logs/2026_03_27_16_49_47/: Logfile.html
rnd_generators_test/logs/2026_03_27_20_09_54/: Logfile.html
rnd_generators_test/source/: ks_crack.cpp  main.cpp
rnd_generators_test/source/first_level_tests/: CMakeLists.txt
rnd_generators_test/source/first_level_tests/include/first_level_tests/: disjoint_vectors.hpp  first_level_tester.hpp  fourier_tester.hpp  ifirst_level_tester.hpp
rnd_generators_test/source/first_level_tests/src/: disjoint_vectors.cpp  fourier_tester.cpp
rnd_generators_test/source/two_level_test/: CMakeLists.txt
rnd_generators_test/source/two_level_test/include/two_level_test/: two_level_tester.hpp
rnd_generators_test/source/two_level_test/src/: two_level_tester.cpp
rnd_generators_test/source/uniformity_tests/: CMakeLists.txt
rnd_generators_test/source/uniformity_tests/include/uniformity_tests/: iuniformity_tester.hpp  ks_uniformity_tester.hpp
rnd_generators_test/source/utils/: CMakeLists.txt
rnd_generators_test/source/utils/include/utils/: bounds_check.hpp
task3/: readme.md  wiener_process_drawer.py
task4_FloatingPoint/: CMakeLists.txt  readme.md
task4_FloatingPoint/include/: dispersia_calculator.hpp  norm_distr_gen.hpp
task4_FloatingPoint/source/: main.cpp
task4_FloatingPoint/source/cmd_options/: CMakeLists.txt
task4_FloatingPoint/source/cmd_options/include/cmd_options/: cmd_options.hpp
task4_FloatingPoint/source/cmd_options/source/: cmd_options.cpp
task5_chi_square/: CMakeLists.txt  additional_readme.md  chi_sq_res.txt  readme.md
task5_chi_square/logs/2026_03_10_20_39_09/: Logfile.html
task5_chi_square/source/: additional_task.cpp
task5_chi_square/source/bivariate_normal_generator/include/bivariate_normal_generator/: bivariate_normal_generator.hpp
task5_chi_square/source/rnd_normal_generator/include/rnd_normal_generator/: rnd_normal_generator.hpp
task5_chi_square/tmp/: biv_rho_neg.txt  chi_sq_res.txt
task7_LogImpl/: CMakeLists.txt  readme.md
task7_LogImpl/source/: clogf.h  main.cpp
task7_LogImpl/source/clogf/: CMakeLists.txt  clogf.cpp  clogf.h
task7_LogImpl/source/dumb_math/: CMakeLists.txt
task7_LogImpl/source/dumb_math/common/: get_floating_parts.hpp
task7_LogImpl/source/dumb_math/include/: dumb_math.hpp
task7_LogImpl/source/dumb_math/include/dumb_math/detail/: calc_ulp_error.hpp
task7_LogImpl/source/dumb_math/modules/logarithm/: CMakeLists.txt
task7_LogImpl/source/dumb_math/modules/logarithm/include/logarithm/: logarithm.hpp  lookup_table_item.hpp
task7_LogImpl/source/dumb_math/modules/logarithm/include/logarithm/common/: approx.hpp
task7_LogImpl/source/dumb_math/modules/logarithm/tests/: CMakeLists.txt
task7_LogImpl/source/dumb_math/modules/logarithm/tests/src/: calc_ulp_error.cpp  test_ulp_error.cpp
task7_LogImpl/source/dumb_math/modules/logarithm/tests/statistics/: CMakeLists.txt  config.hpp.in
task7_LogImpl/source/dumb_math/modules/logarithm/tests/statistics/src/: main.cpp  stat_generator.hpp
task7_LogImpl/source/dumb_math/modules/logarithm/tests/unit/: CMakeLists.txt
task7_LogImpl/source/dumb_math/modules/logarithm/tests/unit/src/: test_ulp_error.cpp
task7_LogImpl/source/dumb_math/modules/logarithm/tools/lookup_table_builder/: CMakeLists.txt
task7_LogImpl/source/dumb_math/modules/logarithm/tools/lookup_table_builder/include/lookup_table_builder/: lookup_table_builder.hpp
task7_LogImpl/source/dumb_math/modules/logarithm/tools/lookup_table_builder/src/: lookup_table_builder.cpp  lookup_table_printer.cpp  main.cpp
task7_LogImpl/source/dumb_math/tools/lookup_table_builder/: CMakeLists.txt
task7_LogImpl/source/dumb_math/tools/lookup_table_builder/include/lookup_table_builder/: lookup_table_builder.hpp
task7_LogImpl/source/dumb_math/tools/lookup_table_builder/src/: lookup_table_builder.cpp  main.cpp
task7_LogImpl/source/dumb_math/tools/lookup_table_builder/tools/cmd_options/: cmd_options.cpp  cmd_options.hpp
task7_LogImpl/tools/cmd_options/: cmd_options.cpp  cmd_options.hpp
task9_matrixmul/: CMakeLists.txt
